# Network-Route-Optimizer

./: .gitignore  README.md
app/: .env.example  Dockerfile  alembic.ini  network_route_optimizer.postman_collection.json  pyproject.toml  script.sh
app/config/: database.py  router.py  urls.py
app/config/settings/: base.py
app/network_optimizer/: main.py  urls.py
app/network_optimizer/events/: bus.py  observers.py
app/network_optimizer/graph/: store.py
app/network_optimizer/graph/algorithms/: dijkstra.py
app/network_optimizer/migrations/: env.py
app/network_optimizer/migrations/versions/: 001_initial_schema.py
app/network_optimizer/models/: orm_models.py
app/network_optimizer/repositories/: edge_repository.py  node_repository.py  route_repository.py
app/network_optimizer/serializers/: serializers.py
app/network_optimizer/services/: edge_service.py  node_service.py  route_service.py
app/network_optimizer/views/: edge_view.py  node_view.py  route_view.py
app/tests/: conftest.py
app/tests/integration/: test_api.py
app/tests/unit/: test_core.py
